# RKNN_API

./: .gitignore  docker-compose.yml
rknn_api/: pyproject.toml
rknn_api/rknn_api/: app.py  sdk.py
